--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <li>Praktikkum 10</li>
 <li>Praktikkum 11</li>
 </ul>
-<p><a href="https://github.com/AzmiFaiz/ti2-posa-2019.github.io/asahkemampuan/">Asah Kemampuanmu disini !!!</a></p>
+<p><a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">Asah Kemampuanmu disini !!!</a></p>
 <h2 id="bahan-bacaan">Bahan Bacaan</h2>
 <ol>
-<li><a href="https://github.com/AzmiFaiz/ti2-posa-2019.github.io/resources/diktatposa.pdf">Teori Open Source dan Aplikasi</a></li>
-<li><a href="https://github.com/AzmiFaiz/ti2-posa-2019.github.io/resources/modulpraktikkumposa.pdf">Materi Praktikkum POSA</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/resources/diktatposa.pdf">Teori Open Source dan Aplikasi</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/resources/modulpraktikkumposa.pdf">Materi Praktikkum POSA</a></li>
 </ol>
 <p><strong>Mari belajar dan berkembang bersama</strong></p>
 </div>
