add link into praktikkum list

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <p><img src="https://wallpaperplay.com/walls/full/6/b/6/172918.jpg#.XZCTyNugOAw.link" alt="Linux Logo from wallpaperplay.com"></p>
 <h2 id="daftar-isi">Daftar Isi</h2>
 <ul>
-<li>Praktikkum 1</li>
-<li>Praktikkum 2</li>
-<li>Praktikkum 3</li>
-<li>Praktikkum 4</li>
-<li>Praktikkum 5</li>
-<li>Praktikkum 6</li>
-<li>Praktikkum 7</li>
-<li>Praktikkum 8</li>
-<li>Praktikkum 9</li>
-<li>Praktikkum 10</li>
-<li>Praktikkum 11</li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan1">Praktikkum 1</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan2">Praktikkum 2</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan3">Praktikkum 3</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan4">Praktikkum 4</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan5">Praktikkum 5</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan6">Praktikkum 6</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan7">Praktikkum 7</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan8">Praktikkum 8</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan9">Praktikkum 9</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan10">Praktikkum 10</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan11">Praktikkum 11</a></li>
 </ul>
 <p><a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">Asah Kemampuanmu disini !!!</a></p>
 <h2 id="bahan-bacaan">Bahan Bacaan</h2>
