Fix Landing Page Image Link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="stackedit">
   <div class="stackedit__html"><h1 id="materi-praktikkum-posa-ti-2-2019">Materi Praktikkum POSA TI-2 2019</h1>
-<p><img src="https://wallpaperplay.com/walls/full/6/b/6/172918.jpg#.XZCTyNugOAw.link" alt="Linux Logo from wallpaperplay.com"></p>
+<p><img src="https://lh3.googleusercontent.com/hd3D7Zn1BK_Mik9DxbXBkIZM6GHp10qY2ATd2pj_qiIfw4g-Y-8xYbu4KWhnlHRbLup6jFZZAGmfFg" alt="Tux Linux Wallpaper Play"></p>
 <h2 id="daftar-isi">Daftar Isi</h2>
 <ul>
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan1">Praktikkum 1</a></li>
