Add Tugas Section on Landing Page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan10">Praktikkum 10</a></li>
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan11">Praktikkum 11</a></li>
 </ul>
-<p><a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">Asah Kemampuanmu disini !!!</a></p>
+
+<h2 id="ingin-lebih">Ingin Lebih Paham ???</h2>
+<p><a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">Ayo Asah Kemampuanmu disini !!!</a></p>
+
 <h2 id="bahan-bacaan">Bahan Bacaan</h2>
 <ol>
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/resources/diktatposa.pdf">Teori Open Source dan Aplikasi</a></li>
