Fix asahkemampuan page

--- a/asahkemampuan/index.html
+++ b/asahkemampuan/index.html
@@ -19,7 +19,7 @@
 <li>Setiap jawaban harus disertakan Screenshot.</li>
 <li>Dikumpul ke E-Len STT NF</li>
 <li>Silahkan kerja sama namun jawaban dan screenshot tetap punya sendiri.</li>
-<li>Paling lambat di kumpul di elen sebelum mulai Praktikkum.</li>
+<li>Paling lambat di kumpulkan ke elen sebelum mulai Praktikkum.</li>
 </ol>
 <h3 id="keterangan-tambahan">Keterangan Tambahan</h3>
 <ol>
