Fix ajakan asahkemampuan

--- a/asahkemampuan/index.html
+++ b/asahkemampuan/index.html
@@ -26,7 +26,7 @@
 <li>Challenge ini akan diambil sebagai nilai Praktikum POSA.</li>
 <li>3 Soal dari Challenge akan dimasukan ke soal UAS.</li>
 </ol>
-<h3 id="ayo-uji-kemampuanmu-">Ayo Uji Kemampuanmu !!!</h3>
+<h3 id="ayo-uji-kemampuanmu-">Mulailah Asah Kemampuanmu Sekarang !!!</h3>
 <h5 id="modul-1">Modul 1</h5>
 <ol>
 <li>Perintah berubah dari user biasa menjadi user root:</li>
