--- a/pertemuan2/index.html
+++ b/pertemuan2/index.html
@@ -12,8 +12,8 @@
   <div class="stackedit__html"><h1 id="pertemuan-kedua.">Pertemuan Kedua.</h1>
 <h2 id="daftar-isi">Daftar Isi</h2>
 <ol>
-<li><a href="https://azmifaiz.github.io/posa-ti2-2019/instalasi.html">Lingkungan Desktop</a></li>
-<li><a href="https://azmifaiz.github.io/posa-ti2-2019/instalasi.html/berkenalan.html">Aplikasi Perkantoran</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan2/lingkungan">Lingkungan Desktop</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan2/perkantoran">Aplikasi Perkantoran</a></li>
 </ol>
 <h2 id="rules-of-the-class">Rules of The Class</h2>
 <ol>
