--- a/pertemuan3/index.html
+++ b/pertemuan3/index.html
@@ -12,7 +12,7 @@
   <div class="stackedit__html"><h1 id="pertemuan-ketiga.">Pertemuan Ketiga.</h1>
 <h2 id="daftar-isi">Daftar Isi</h2>
 <ol>
-<li><a href="https://azmifaiz.github.io/posa-ti2-2019/instalasi.html">Shell - Command -VIM</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan3/shell">Shell - Command -VIM</a></li>
 </ol>
 <h2 id="rules-of-the-class">Rules of The Class</h2>
 <ol>
