--- a/pertemuan1/index.html
+++ b/pertemuan1/index.html
@@ -12,8 +12,8 @@
   <div class="stackedit__html"><h1 id="pertemuan-pertama.">Pertemuan Pertama.</h1>
 <h2 id="daftar-isi">Daftar Isi</h2>
 <ol>
-<li><a href="https://azmifaiz.github.io/posa-ti2-2019/instalasi.html">Instalasi Linux dengan Metode Dual-Boot</a></li>
-<li><a href="https://azmifaiz.github.io/posa-ti2-2019/instalasi.html/berkenalan.html">Berkenalan dengan GNU/Linux.</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan1/instalasi">Instalasi Linux dengan Metode Dual-Boot</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan1/berkenalan">Berkenalan dengan GNU/Linux.</a></li>
 </ol>
 <h2 id="rules-of-the-class">Rules of The Class</h2>
 <ol>
