Pertemuan2 Link Modification

--- a/pertemuan2/lingkungan/index.html
+++ b/pertemuan2/lingkungan/index.html
@@ -52,7 +52,7 @@
 <li>Install aplikasi melalui Ubuntu Software Center.</li>
 </ol>
 <h2 id="selesai.-ada-pertanyaan-">Selesai. Ada Pertanyaan ???</h2>
-<h2 id="yuk-dilanjut"><a href="https://github.com/AzmiFaiz/posa-ti2-2019/pertemuan2/perkantoran.html">Yuk dilanjut</a></h2>
+<h2 id="yuk-dilanjut"><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan2/perkantoran">Yuk dilanjut</a></h2>
 </div>
 </body>
 
