--- a/pertemuan8/index.html
+++ b/pertemuan8/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pertemuan8lp</title>
+  <title>Praktikkum 8 POSA</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
