Add part word on instalasi pertemuan 1

--- a/pertemuan1/instalasi/index.html
+++ b/pertemuan1/instalasi/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__html"><h1 id="instalasi-linux-dengan-metode-dual-boot.">Instalasi Linux dengan Metode Dual Boot.</h1>
+  <div class="stackedit__html"><h1 id="instalasi-linux-dengan-metode-dual-boot.">Instalasi Linux dengan Metode Dual Boot. Part 1</h1>
 <p><img src="https://wallpaperaccess.com/full/981853.png" alt="wallpaper access"></p>
 <h2 id="first-things-first">First Things First</h2>
 <ol>
