--- a/pertemuan1/instalasi/install.html
+++ b/pertemuan1/instalasi/install.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__html"><h1 id="instalasi-linux-dengan-metode-dual-boot.">Instalasi Linux dengan Metode Dual Boot.</h1>
+  <div class="stackedit__html"><h1 id="instalasi-linux-dengan-metode-dual-boot.">Instalasi Linux dengan Metode Dual Boot. Part 2</h1>
 <h2 id="sebelum-dimulai...">Sebelum Dimulai…</h2>
 <ul>
 <li>Cari cara untuk masuk BIOS / Recovery Mode di komputer masing-masing</li>
