--- a/pertemuan7/index.html
+++ b/pertemuan7/index.html
@@ -16,7 +16,7 @@
 </ol>
 <h2 id="rules-of-the-class">Rules of The Class</h2>
 <ol>
-<li>Membaca do’a sebelum mulai Praktikkum</li>
+<li>Membaca do’a sebelum dan setelah Praktikkum</li>
 <li>Review materi sebelum mulai Praktikkum selama 5 Menit</li>
 <li>Silakan tanyakan materi diluar praktikkum melalui tatap muka langsung atau WhatsApp, jika masih ada yang ingin ditanyakan</li>
 <li>Bertanyalah sebelum tambah bingung di kemudian hari</li>
