--- a/pertemuan1/instalasi/index.html
+++ b/pertemuan1/instalasi/index.html
@@ -4,103 +4,106 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pertemuan 1 - Instalasi Linux</title>
+  <title>Pertemuan 1 - Proses Install</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__html"><h1 id="instalasi-linux-dengan-metode-dual-boot.">Instalasi Linux dengan Metode Dual Boot. Part 1</h1>
-<p><img src="https://wallpaperaccess.com/full/981853.png" alt="wallpaper access"></p>
-<h2 id="first-things-first">First Things First</h2>
-<ol>
-<li>Angkat tangan jika penjelasan terlalu cepat</li>
-<li>Mari membuat suasana praktikkum yang kondusif</li>
-<li>Aktiflah bertanya agar tidak bingung di kemudian hari</li>
-</ol>
-<h2 id="sebelum-dimulai...">Sebelum dimulai…</h2>
+  <div class="stackedit__html"><h1 id="instalasi-linux-dengan-metode-dual-boot.">Instalasi Linux dengan Metode Dual Boot.</h1>
+<h2 id="sebelum-dimulai...">Sebelum Dimulai…</h2>
 <ul>
-<li></li>
+<li>Cari cara untuk masuk BIOS / Recovery Mode di komputer masing-masing</li>
+<li>Nyalakan dengan sim ejector / peniti khusus untuk yang memerlukan</li>
+<li>Matikan Opsi Fast Startup dari BIOS</li>
 </ul>
-<h3 id="alat-yang-diperlukan">Alat yang diperlukan</h3>
+<h2 id="proses-instalasi-ubuntu.">Proses Instalasi Ubuntu.</h2>
 <ol>
-<li>Siapkan FlashDisk kosong berkapasitas min. 8GB</li>
-<li>Install software <strong>PowerISO</strong></li>
-<li>Install Software <strong>Minitool Partition Wizard</strong></li>
-<li>Ubuntu 18.04 ISO</li>
-<li>Siapkan peniti/sim ejector untuk laptop tertentu masuk recovery mode</li>
-<li>Pastikan Baterai Laptop diatas 50% / Terhubung dengan power adapter</li>
+<li>Nyalakan komputer dan Masuk ke BIOS Mode/Recovery Mode.</li>
+<li>Pilihlah untuk melakukan Boot dari USB, kebanyakan komputer menekan tombol F12 sebelum masuk ke logo Windows, tombol F2 &amp; F10 juga menjadi alternatif</li>
+<li>Akan muncul pilihan yang berbeda saat mulai install ubuntu. Pilih <strong>Install Ubuntu</strong></li>
 </ol>
-<h2 id="siap-siap-dulu-yuk..">Siap-siap dulu yuk…</h2>
-<h4 id="matikan-opsi-fast-startup-di-windows-8--10.">Matikan opsi fast startup di Windows 8 / 10.</h4>
-<ol>
-<li>
-<p>Klik kanan pada ikon battery lalu pilih <strong>Power Options</strong><br>
-<img src="https://lh3.googleusercontent.com/JAmfzVmFNYRRBChejc1pEyJeUPeufdo5lZBSbkPalXSMP4WKNzg17I0hGQe2x4VZqJ-HyoTIf45Uag" alt="Windows 10 Battery"></p>
-</li>
-<li>
-<p>Klik “Choose what the power buttons do”<br>
-<img src="https://lh3.googleusercontent.com/X4qAVMyao2Lx8VxirLgzE3kITZ531mMB_Lr4QQLPlRnOzVBNSOHZalD9Kgv4HXpjezkrSHm_A3TYVw" alt="poweroptions"></p>
-</li>
-<li>
-<p>Scroll down ke “Shutdown settings” dan uncheck pada tulisan “Turn on fast startup”.<br>
-<em>Note: Jika tulisan kotak ini belum bisa di uncheck maka kita harus klik “Change settings that are currently unavailable”.</em><br>
-<img src="https://lh3.googleusercontent.com/b1Mtp1mINcLpXMj_e5gXMfVDp2nKCl3qewXidkXpWLDvBrGGL4R_FXk6RPe-MAGS4hRQktUx6gT3kQ" alt="powerbutton"></p>
-</li>
-<li>
-<p>Klik “Save Changes”</p>
-</li>
+<p><img src="https://lh3.googleusercontent.com/PoY7BXKDkloypuOyUDNHCdViJLlog6ZgrgqBXreEWYIUYpxM8eMzgbongqulEySMKygsDP1zQCZDag" alt="install 1"></p>
+<p><img src="https://lh3.googleusercontent.com/UIC2kj4RCLR3RbHhR9vKhDTjp_0yU2Ds8Qof2DmyrC1LJTI8HcBm_Y2NSkeniRoXuvTcSjB-2TD7eQ" alt="install 1.2"></p>
+<ol start="4">
+<li>Jangan disambungkan ke jaringan internet, agar proses instalasi menjadi lebih cepat karena tidak update</li>
+<li>Mulai muncul pilihan bahasa, Pilih bahasa Indonesia jika lebih nyaman menggunakan Bahasa Indonesia. Klik <strong>Continue</strong></li>
+<li>Mulai muncul pilihan keyboard Layout. Jika tidak memakai keyboard dengan input khusus maka bisa di klik <strong>Continue</strong></li>
+<li>Pada bagian updates and other software pilih/ceklis <strong>normal installation</strong> dan <strong>install third party…</strong><br>
+Untuk pilihan <strong>Download Updates</strong> bisa di uncheck</li>
+<li>Di bagian <strong>Installation type</strong> pilihlah <strong>Something else</strong></li>
 </ol>
-<h4 id="membuat-partisi-untuk-linux-dan-swap.">Membuat Partisi Untuk Linux dan Swap.</h4>
-<ol>
-<li>
-<p>Buka aplikasi MiniTool Partition Wizard, Pilih Launch Application.<br>
-Pilih partisi yang akan di split untuk penyimpanan Linux dan Swap. Lalu klik <strong>split partition</strong> -&gt; <strong>split</strong><br>
-<img src="https://lh3.googleusercontent.com/7j3SJNMzShZ7hzyV_ZLeSXT96IEcyieiADSjbQHYYwJf9dmsuC38p6jZ_7F-T9-wDzAc_FnJXnlC6w" alt="split1"></p>
-</li>
-<li>
-<p>Drag Slider nya untuk menentukan besarnya penyimpanan Linux. Klik OK jika sudah selesai. <strong>Note :</strong> <em>Rekomendasi dari saya, 25GB untuk Linux &amp; 3GB untuk Swap</em><br>
-<img src="https://lh3.googleusercontent.com/3tTT6jvwjrHBevNFSSdJxUnK5ZT7TohUQ1D5IpAdZ6eLO2bCG_wXYPVOvW2Sghl4XlFST3CWN_A9UQ" alt="split2"></p>
-</li>
-<li>
-<p>Kembali ke tampilan awal dan klik <strong>Apply</strong> untuk membuat partisi yang diinginkan. Tunggu Prosesnya.<br>
-<img src="https://lh3.googleusercontent.com/41NvEm5bvAy8s57B75Yun_YR043roAMqZ5L2rRdq94k2PYLalcaGOOYEe1rSS5-1eqm__tu6iy2jqQ" alt="split3"></p>
-</li>
-</ol>
-<h4 id="membuat-bootable-flash-disk-sebagai-sumber-instalasi-linux.">Membuat bootable Flash Disk sebagai sumber instalasi Linux.</h4>
-<ol>
-<li>Buka Aplikasi PowerISO, Pastikan FD sudah di backup &amp; sudah terbaca oleh komputer. Klik Tools -&gt; “Create bootable USB Drive”</li>
-</ol>
-<p><img src="https://lh3.googleusercontent.com/Ybwoz0khZ-8YanUArorXd9TARAmhocOZ-ndtzVEflnEsKWVB2Th9WXC6gp_EKwTt6VsoyleYmI8V1g" alt="setup1"></p>
-<p>Klik OK<img src="https://lh3.googleusercontent.com/u9jt3ftrFlXqyUyr6xZbizB1IEtg7C_GEcyE5dHKzMyi9Ix75Gt9_Q0IjlBYPRz4sZOggZmXTo1S1g" alt="setup2"></p>
-<ol start="2">
-<li>
-<p>Klik gambar folder pada pilihan <strong>Image File</strong>, cari letak file ISO Ubuntu, lalu pilih. Pastikan <strong>Image File</strong> berisi lokasi dari file ISO Ubuntu</p>
-</li>
-<li>
-<p>Untuk <strong>Destination USB Drive</strong> pastikan kita telah memilih FlashDisk yang sudah disiapkan<br>
-<img src="https://lh3.googleusercontent.com/rjCxJs937m3PptGEi0GWVcp7C9brZ82pkYonHz-MR53wUFI7gB_kZWXPg0pCp0EbGU8e4dvUO0lDyw" alt="setup3"></p>
-</li>
-<li>
-<p>Klik Start untuk memulai proses pembuatan bootable FlashDisk.</p>
-</li>
-<li>
-<p>Akan muncul peringatan dari PowerISO, pastikan kembali bahwa yang muncul adalah FD yang sudah disiapkan.<br>
-<img src="https://lh3.googleusercontent.com/xERMZfZGH7yviXeIEtfY2w5c8xQSN4GWOi2w7gk4ZwifTXewztmJtPsSfVoJz1NSHQgC1mWG3sNRtA" alt="setup4"></p>
-</li>
-</ol>
-<ul>
-<li>PowerISO akan mulai membuat Bootable USB, dan menunjukkan progress &amp; estimasi waktu penulisan data. Nantinya akan muncul popup message “Writing USB drive completed successfully.” setelah prosesnya selesai.<br>
-<img src="https://lh3.googleusercontent.com/ZXCkbZyr2T2tHSLHcXmSKJXEY_-Zwc6FTAFMT7cpbcjptFsdrbual-3tDAEfu1dnz_5tSf3iv3q1Pg" alt="setup5"></li>
-</ul>
-<ol start="6">
-<li>Jika tidak muncul pesan error, maka proses yang dilakukan telah berhasil. Maka kita sudah siap untuk <strong>Install Linux</strong><br>
-<img src="https://lh3.googleusercontent.com/n4d8X-657o4LwEoJ1e3Pf9Qlw80F-gQ3tGh-Sv46YLh6OafPysividVni9i7RZ3MxO9mLpxZWRpqaQ" alt="setup6"></li>
-</ol>
-<h2 id="proses-persiapan-selesai.-ada-pertanyaan-">Proses Persiapan Selesai. Ada Pertanyaan ???</h2>
+<p><img src="https://lh3.googleusercontent.com/iiAjctltTYnP62lzRktOo-Ln6KiOEOuZK78pOGeDcdq497vQ9OGtmZrlqMHwKZEzy5UepeIhXaBwiA" alt="install 2"></p>
 <blockquote>
-<h3 id="shutdown-your-computer-ladies-and-gentleman.-get-ready-to-start-entering-the-world-of-linux">Shutdown your computer Ladies and Gentleman. Get ready to start entering the world of linux</h3>
+<p>Perhatikan langkah selanjutnya karena kalau salah pilih partisi maka data kita pun akan hilang :(</p>
 </blockquote>
-<p>Mari kita mulai <a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan1/instalasi/install.html"><strong>Install Linux nya !!!</strong></a></p>
+<ol start="9">
+<li>Pilih partisi yang sudah dibuat sebelumnya. Diingat kembali besar partisi yang dibuat.</li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/R8baOyB7qYUM_6mNMgyuLMw7TvGqlr2NioJCydKJc2Qmhfqoz7OXyGi2Lsh3GYZy7KPwsxvhP3XR1g" alt="install 3"><br>
+<img src="https://lh3.googleusercontent.com/BZ5wPRjZxjIxzXVgQAm8RycN1Ro1Lc8T-y-wyLvWdSUYLGOjNpr-5jUjLTc4ayqzW7ZVYcW-CawKVA" alt="install 4"></p>
+<ol start="11">
+<li>Pilih Partisi yag sudah ditentukan menjadi mount point <strong>/</strong></li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/HYfOLtAr2KZimYuR6yj51SLuT2OJW-yZKBtZPg50Ef_RHaEe--gQHNLk68-d9YfPhyS-1BTmVm2DlA" alt="install 5"></p>
+<ol start="13">
+<li>
+<p>Pilih partisi dengan size 3GB sebagai mount point <strong>swap</strong></p>
+</li>
+<li>
+<p>Setelah konfigurasi penyimpanan akan muncul warning dari ubuntu. pastikan partisi yang dipiliih benar dan akan di format</p>
+</li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/6-IQzq0MpyA0ukwQkjz-R2o_3asWpFhzqTlMXZ62cFfYSS3NdFF-nqWgKu81jmhwh0YTEkPpudHVeQ" alt="install 6"></p>
+<ol start="16">
+<li>Pilih lokasi kita berada. Pilih Jakarta</li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/q-X3-8L3YYgdARvNHr3_UH2q58rJexrT5kJQTZQiy5hblM5GiszUK0RH0Foyi3qaCYbJ0c5l6Suitw" alt="install 7"></p>
+<ol start="14">
+<li>Isi login detail dengan username dan password yang dikehendaki</li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/6Hb0NK2zyg_jrxRvhZMh5Iln4oEjYI688j3Ig0ATJQJPbD_7sqOSJIiEZM1wdmbOGMbha0rqIs9xHw" alt="install 8"></p>
+<ol start="15">
+<li>Proses Instalasi akan berjalan</li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/gw1oM8dPTI0FrCmarTQ0195bcdJm_5BsHl3rZyv71o-RDKPdXBf42wkblmX8VQVeRNt64flihwbdOA" alt="install 9"></p>
+<ol start="17">
+<li>
+<p>Jika proses instalasi berjalan dengan baik maka akan muncul pilihan restart<br>
+<img src="https://lh3.googleusercontent.com/93jybnYRFan6wjW6nbOGj0d40mt8DFiDeEhn_Q3nIxA_ZHz1VCyKkuQ76oRO4ytKORQ6sOWE787jvw" alt="install 10"></p>
+</li>
+<li>
+<p>Ada pilihan untuk melepaskan FlashDisk sebelum restart, maka lepaskan FlashDisk sebelum restart komputer.</p>
+</li>
+</ol>
+<h3 id="membuat-flashdisk-kembali-normal">Membuat FlashDisk kembali normal</h3>
+<ol>
+<li>Setelah kita membuat FlashDisk menjadi Bootable maka FlashDisk seolah-olah tidak bisa digunakan kembali. Perhatikan cara berikut untuk membuat flashdisk kita kembali normal.</li>
+<li>Login ke OS Windows &amp; Buka program PowerISO</li>
+<li>Klik pilihan <strong>Clean USB Drive</strong></li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/maBLA_-q67ioaWIMd3kA_JE1iolutqRHWRaFWGkfzTLiELUJsHThSvYBLpphOjXRaHntc6kqCS_HpQ" alt="enter image description here"></p>
+<ol start="4">
+<li>Muncul pilihan Run as Administrator, maka kita klik <strong>OK</strong></li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/0luZlx9wTWtToCubq0k6FvKz6AKXBvZxDkUzOJWgU6nCQrkRtpxbEfyz72S38XTn_yADnaX3dysZbg" alt="enter image description here"></p>
+<ol start="5">
+<li>Pastikan Drive Letter &amp; nama FlashDisk kita terbaca pada kolom <strong>Step 2</strong></li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/mpkZ1_df3_dGOMVIay0xI7jFu8s2c7fs6mJ6_vhTR8gnfrwyra6xA6xPaO3Z38Vq6o-MFT5wWs0P1w" alt="enter image description here"></p>
+<ol start="6">
+<li>
+<p>Setelah Proses selesai, cabut FlashDisk nya lalu masukkan kembali ke komputer.</p>
+</li>
+<li>
+<p>Format menggunakan program bawaan windows. Pastikan kembali Drive Letter &amp; Nama FlashDisk yang kita format adalah benar.</p>
+</li>
+</ol>
+<p><img src="https://lh3.googleusercontent.com/GIuM8bvguuZYa_0R_rc4pyjQ_jCHMz4xXKX0KMQ1BtPdDgylaSm3INtU2pHo22YEAp9dccnp15HIqw" alt="enter image description here"></p>
+<h2 id="selesai.">Selesai.</h2>
+<p><strong>Ada Pertanyaan ???</strong></p>
+<blockquote>
+<p>Welcome to the world of Linux !!!</p>
+</blockquote>
 </div>
 </body>
 
