add sebelum dimulai on instalaasi

--- a/pertemuan1/instalasi/index.html
+++ b/pertemuan1/instalasi/index.html
@@ -19,7 +19,11 @@
 </ol>
 <h2 id="sebelum-dimulai...">Sebelum dimulai…</h2>
 <ul>
-<li></li>
+<li>Backup data untuk jaga jaga</li>
+<li>Sumber & Target Instalasi : CD/DVD, FlashDisk, Live-CD, Installer CD</li>
+<li>Partisi: Primary & Extended (Partisi Logical)</li>
+<li>Partisi Sistem & Swap</li>
+<li>Bootloader</li>
 </ul>
 <h3 id="alat-yang-diperlukan">Alat yang diperlukan</h3>
 <ol>
