Add Template Laporan

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <ol>
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/resources/diktatposa.pdf">Teori Open Source dan Aplikasi</a></li>
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/resources/modulpraktikkumposa.pdf">Materi Praktikkum POSA</a></li>
+<li><a href="https://azmifaiz.github.io/posa-ti2-2019/resources/templatelaporan.odt">Template Laporan Praktikkum</a></li>
 </ol>
 <p><strong>Mari belajar dan berkembang bersama</strong></p>
 </div>
