Add Challenges Explanation

--- a/pertemuan1/index.html
+++ b/pertemuan1/index.html
@@ -26,6 +26,7 @@
 <li>50% Praktikkum</li>
 <li>25% Tugas</li>
 <li>25% Kehadiran</li>
+<li>Setelah praktikkum diharapkan mengumpulkan laporan dengan template yang bisa diliat <a href="https://azmifaiz.github.io/posa-ti2-2019/resources/templatelaporan.odt">disini</a> & ditambah di akhir dokumen dengan jawaban dari challenges <a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">disini</a></li>
 </ul>
 </li>
 </ol>
