Add After Class Explanation to 2-11

--- a/pertemuan2/index.html
+++ b/pertemuan2/index.html
@@ -26,6 +26,7 @@
 - Maksimal Izin 5 Jam sebelum praktikkum<br>
 - Jika datang telat tanpa konfirmasi / konfirmasi dadakan akan berdampak pada pengurangan nilai<br>
 - Izin dadakan / tanpa konfirmasi hanya diperbolehkan jika ada udzur syar’i</li>
+<li>Setelah praktikkum diharapkan mengumpulkan laporan dengan template yang bisa diliat <a href="https://azmifaiz.github.io/posa-ti2-2019/resources/templatelaporan.odt">disini</a> & ditambah di akhir dokumen dengan jawaban dari challenges <a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">disini</a></li>
 </ol>
 <h2 id="insights-and-notes">Insights and Notes</h2>
 <ul>
