add notes for pertemuan 1 & 2

--- a/pertemuan1/index.html
+++ b/pertemuan1/index.html
@@ -32,7 +32,9 @@
 </ol>
 <h2 id="insights-and-notes">Insights and Notes</h2>
 <ul>
-<li>Sesi ini akan diisi jika ada pertanyaan yang menarik untuk dicatat &amp; dibahas</li>
+<li>Fast boot juga ada di bios, jadi kalo mau dual boot harap dimatikan</li>
+<li>kalo iso nya corrupt, tandanya gabisa restart setelah selesai install terus kalo di virtualox dia ga dibaca sebagai cd, keluarannya error</li>
+<li>tanda bendera/air di terminal menandakan dimana direktori user berada. jadi kalo ada tanda bendera/air berarti lagi ada di folder default</li>
 </ul>
 <hr>
 <p><strong>Ayo Mulai Praktikkum</strong></p>
