--- a/asahkemampuan/index.html
+++ b/asahkemampuan/index.html
@@ -14,7 +14,7 @@
 <h3 id="mari-pahami-peraturannya">Mari Pahami peraturannya</h3>
 <ol>
 <li>Dokumen Ditulis di LibreOffice Writer.</li>
-<li>Dokumen dikumpulkan dalam bentuk odt dan pdf.</li>
+<li>Dokumen dikumpulkan dalam bentuk odt</li>
 <li>Format nama file: Nama - Challenge POSA (Fulan - Challenge POSA)</li>
 <li>Setiap jawaban harus disertakan Screenshot.</li>
 <li>Dikumpul ke E-Len STT NF</li>
@@ -33,8 +33,14 @@
 <li>Perintah mengubah password user faiz:</li>
 <li>Perintah me-restart Linux:</li>
 <li>Perintah mematikan Linux:</li>
+<li>Apa itu partisi SWAP kenapa harus memakai swap</li>
 </ol>
 <h5 id="modul-2">Modul 2</h5>
+<ol>
+	<li>Buat Lamaran Kerja menggunakan LibreOffice Writer seperti contoh berikut : <a href="https://azmifaiz.github.io/posa-ti2-2019/resources/lamaran.pdf">Surat Lamaran Kerja</a></li>
+	<li>Buat Laporan Keuangan menggunakan LibreOffice Calc seperti contoh berikut : <a href="https://azmifaiz.github.io/posa-ti2-2019/resources/laporankeuangan.pdf">Laporan Keuangan</a></li>
+	<li>Apa evaluasi praktikum kedua? apa masukan dan saran?</li>
+</ol>
 <h5 id="modul-3">Modul 3</h5>
 <h5 id="modul-4">Modul 4</h5>
 <h5 id="modul-5">Modul 5</h5>
