add asahkemampuan modul 3

--- a/asahkemampuan/index.html
+++ b/asahkemampuan/index.html
@@ -42,6 +42,41 @@
 	<li>Apa evaluasi praktikum kedua? apa masukan dan saran?</li>
 </ol>
 <h5 id="modul-3">Modul 3</h5>
+<ol>
+<li>
+<p>Buat direktori FOSS</p>
+<ul>
+<li>pindah ke direktori FOSS.</li>
+<li>cek posisi sekarang</li>
+<li>buat file memahami.txt dan linux.txt</li>
+</ul>
+</li>
+<li>
+<p>Buat direktori belajar</p>
+<ul>
+<li>pindahkan direktori FOSS ke direktori belajar.</li>
+<li>masuk ke direktori belajar.</li>
+<li>cek posisi sekarang.</li>
+<li>tampilkan isi direktori belajar.</li>
+</ul>
+</li>
+<li>
+<p>Hapus direktori belajar</p>
+<ul>
+<li>tampilkan isi direktori sekarang</li>
+</ul>
+</li>
+<li>
+<p>Buat file latihan di vim</p>
+<ul>
+<li>tuliskan biodata diri yang berisi: nama, alamat, umur, jurusan, kelas, nim.</li>
+<li>simpan file tersebut</li>
+</ul>
+</li>
+<li>
+<p>Apa evaluasi praktikum ketiga? apa masukan dan saran?</p>
+</li>
+</ol>
 <h5 id="modul-4">Modul 4</h5>
 <h5 id="modul-5">Modul 5</h5>
 <h5 id="modul-6">Modul 6</h5>
@@ -49,6 +84,7 @@
 <h5 id="modul-8">Modul 8</h5>
 <h5 id="modul-9">Modul 9</h5>
 <h5 id="modul-10">Modul 10</h5>
+<h5 id="modul-11">Modul 11</h5>
 <h3 id="selamat-mengerjakan.">Selamat Mengerjakan.</h3>
 </div>
 </body>
