--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <li><a href="https://azmifaiz.github.io/posa-ti2-2019/pertemuan11">Praktikkum 11</a></li>
 </ul>
 
-<h2 id="ingin-lebih">Ingin Lebih Paham ???</h2>
+<h2 id="ingin-lebih">Ingin Lebih Paham ????</h2>
 <p><a href="https://azmifaiz.github.io/posa-ti2-2019/asahkemampuan/">Ayo Asah Kemampuanmu disini !!!</a></p>
 
 <h2 id="bahan-bacaan">Bahan Bacaan</h2>
